--- a/index.html
+++ b/index.html
@@ -4,37 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CS WebSite!</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Computer Science</title>
 </head>
 
 <body>
-    <div class="container">
+    <section class="container">
+        <ul class="nav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="https://www.youtube.com/watch?v=SzJ46YA_RaA">ABOUT</a></li>
+            <li><a href="https://www.linkedin.com/in/hasan-noureddine-28b169266/">CONTACT US</a></li>
+        </ul>
 
-        <div class="a">
-            <h1>What is computer Science?</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, eum?
-        </div>
-        <div class="b">
-            <h1>How will AI transform the Field?</h1>Lorem ipsum, dolor
-            sit amet consectetur adipisicing elit. Magnam, ratione!
-            <a href="https://www.youtube.com/watch?v=o5MutYFWsM8">CHATGPT</a>
+    </section>
 
-        </div>
-        <div class="c">
-            <h1>What is the best way to Learn CS?</h1>Lorem ipsum dolor, sit
-            amet consectetur adipisicing elit. Eos, error?
-            <a href=" https://www.youtube.com/watch?v=SzJ46YA_RaA">CS Roadmap</a>
+    <section class="button">
+        <div>Hover Here!</div>
+    </section>
 
-        </div>
-        <div class="d">
-            <h1>concluding remarks</h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
-            necessitatibus ullam voluptatem, error quod quis facilis modi.
-        </div>
-    </div>
 
 
 </body>
+
+
+
+</html>
 
 </html>
